# frag_hop

./: LICENSE  README.md  dependences.txt  setup.cfg  setup.py
Ranking/: rank_fragments.py
Ranking/.ipynb_checkpoints/: compare_RMSD_methods-checkpoint.ipynb
Replacement/: main.py  replace_fragments.py  utils.py
frag_hop/: main.py
frag_hop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
frag_hop/analysis/: score.py
frag_hop/data/TestingFiles/: test_configurations.conf
frag_hop/data/TestingFiles/S1/: fragments.conf
frag_hop/data/parameters/: __init__.py  atom_constants.py
frag_hop/helpers/: AI.py  __init__.py  hopping.py  pele.py  screening.py
frag_hop/replacement/: __init__.py  fragment.py  replacer.py  scaffold.py  structure.py
frag_hop/tests/: test_hopping.py
frag_hop/utils/: __init__.py  covalent.py  geometry.py  noncovalent.py  tools.py  utils.py
