[metadata]
# replace with your username:
name = frag_hop
version = 0.0.1
author = Laura Malo
author_email = laumaro95@gmail.com
description = Fragment Hopping
url = https://github.com/laumalo/frag_hop
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

